manifests/service/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: auth.liberte.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-web
                port:
                  number: 80
  tls:
    - hosts:
        - auth.liberte.top
      secretName: auth-liberte-top-tls
